external/esprima/test_fixtures/es2017/async/invalid-await/invalid-await-declaration1.js
async function f() { let await; }
